fix logo alignment

--- a/app/src/styles/core_styles/_common.scss
+++ b/app/src/styles/core_styles/_common.scss
@@ -284,7 +284,7 @@ body {
     right: 0;
     bottom: 0;
     left: 50%;
-    border-left: 1px solid $color-blue-light;
+    border-left: 1px solid $color-gray-slight;
     transform: translate(-50%);
     transition: all .3s ease;
 
@@ -351,7 +351,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    border-top: 1px solid $color-blue-light;
+    border-top: 1px solid $color-gray-slight;
     transition: all .3s ease;
 
     &-q0 {
@@ -416,7 +416,7 @@ body {
   padding: 0;
   margin: 0;
   position: absolute;
-  top: calc(50% - 36px);
+  // top: calc(50% - 36px);
   right: 50%;
   bottom: 50%;
   left: 50%;
@@ -478,9 +478,8 @@ body {
   }
   &-q4 {
     @extend .flex-item-q0;
-    top: calc(90% - 36px);
+    top: calc(5% - 36px);
     left: 5%;
-    top: 0%;
     right: 95%;
 
   }
